# shor_cpp

./: .gitignore  CMakeLists.txt  adder.cpp  adder.h  common.cpp  common.h  common_impl.h  common_lib.h  commonworld.h  config.h  cvariant.h  doxygen.conf  gatesimpl.cpp  gatesimpl.h  icommonworld.h  igates.h  inoise.h  iqregister.h  iregdeserializer.h  main.cpp  measure.cpp  measure.h  multiplier.cpp  multiplier.h  noise.cpp  noise.h  parallelsubsystemcommon.h  profiler.py  qft.cpp  qft.h  qft_adder.cpp  qft_adder.h  qmath.h  qmatrix.cpp  qmatrix.h  qreghelper.h  qregister.cpp  qregister.h  qscript_stubs.h  quantum_cpp.pro  (+6 more)
include/common/: config.h  cvariant.h  qmath.h  qmatrix.h  quantum_common_circuits.h  quantum_common_impl.h  quantum_common_lib.h  utils.h
include/common/infra/: common_func.h  common_rand.h  commonworld.h  io.h  mpiio.h  parallelsubsystemcommon.h  qscript_stubs.h  regserialization.h  xmlparsers.h
include/common/infra/impls_lists/: common_world.h  infra_perfcounter.h  infra_serializer.h  quantum_gates.h  quantum_noise.h  quantum_register.h
include/common/quantum/: adder.h  common.h  multiplier.h  qft.h
include/iface/infra/: icommonworld.h  iobject.h  iperfcounter.h  iregserializer.h
include/iface/quantum/: igates.h  inoise.h  iqregister.h  measure.h
src/impls/infra/common/: common_rand.cpp  qmatrix.cpp  regdeserializer.cpp  xml_parsers.cpp  xmlparsers.cpp
src/impls/infra/perfcounters/: perfcounters_all.h
src/impls/infra/perfcounters/papi/: papiperfcounter.cpp  papiperfcounter.h
src/impls/infra/perfcounters/simple/: simpleperfcounter.cpp  simpleperfcounter.h
src/impls/infra/perfcounters/stub/: stubperfcounter.h
src/impls/infra/serializers/: contexthelper.cpp  contexthelper.h  serializers_all.h  serializers_common.h
src/impls/infra/serializers/binary/: binaryserializer.cpp  binaryserializer.h
src/impls/infra/serializers/text/: textserializer.cpp  textserializer.h
src/impls/quantum/common/: adder.cpp  common.cpp  measure.cpp  multiplier.cpp  qft.cpp  qreghelper.cpp
src/impls/quantum/gates/: gates_all.h
src/impls/quantum/gates/mpi/: mpi_gatesimpl.cpp  mpi_gatesimpl.h
src/impls/quantum/gates/omp/: omp_gatesimpl.cpp  omp_gatesimpl.h
src/impls/quantum/noise/: noise.cpp  noise.h  noise_all.h  noise_random.h  simple_noise_provider.h
src/impls/quantum/noise/crauss/: crauss_noise.cpp  crauss_noise.h
src/impls/quantum/noise/crot/: crot_noise.cpp  crot_noise.h
src/impls/quantum/noise/stubs/: stubs_noise.h
src/impls/quantum/noise/unitary/: unitary_noise.cpp  unitary_noise.h
src/impls/quantum/register/: qregisterfactory.cpp  qregisterfactory.h  registers_all.h
src/impls/quantum/register/shared/: sharedqregister.cpp  sharedqregister.h
src/impls/quantum/register/single/: singleqregister.cpp  singleqregister.h
tests/: tests.cpp  tests.h
